{
    "name": "GameControls",
    "maps": [
        {
            "name": "Player",
            "id": "d6252b34-d6da-4d43-ad91-ec2ace46c8a9",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "ccb116db-f242-4614-b759-6b1740fb2109",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c09ac2ad-22ac-41b4-8cf3-4df385c12fd2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "2b84931d-e82d-4922-a112-ff9c12820171",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateViewPoint",
                    "type": "Value",
                    "id": "f42eb2bb-fa51-42f8-bc9c-f1d2ef36ae2a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "ed3c762f-f222-4959-9238-939b82ed67ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrowingStance",
                    "type": "Button",
                    "id": "e48ab3eb-3771-4943-b01c-010eb3ffff0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "c6dc93e5-54d3-43c8-b554-c4d8092af467",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrowAim",
                    "type": "Value",
                    "id": "abc3db55-edbb-4c4c-abce-cb9b2db9b274",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "3aba2e08-be4d-46eb-9af2-013569e3976f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67c78102-2091-4733-8702-3ddccc5db853",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "864d7c9c-001a-4c62-b737-1b3d1a162ba1",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4cceafa-6a3a-4cb9-b8ad-8950dd85109b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b12731f1-b6a0-4ed3-b251-13be47ffbb21",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateViewPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "718662aa-22c7-4c45-bc76-602b581835f7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d54afae-c8c3-4bb7-8a9a-1554b9a55061",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowingStance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b107b64-6520-4815-b2c8-a22ca58d41d9",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Right Stick Vertical",
                    "id": "561c4ba9-6208-4f57-8c99-64d782e9520c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowAim",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ce72aff0-c874-48ee-b7c8-10e0a3cd98af",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7b1fef51-bfad-4788-b564-2f3342acbd3a",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1314145f-a84b-4d81-a9a6-8767ace4f73d",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}